--- a/doc/技术积累.md
+++ b/doc/技术积累.md
@@ -18,7 +18,7 @@
 #http代理
 git config --global http.proxy 'http://127.0.0.1:7890'
 #https代理
-git config --global https.proxy 'http://127.0.0.1:7890'
+git config --global https.proxy 'https://127.0.0.1:7890'
 #http代理
 git config --global http.proxy 'socks5://127.0.0.1:7890'
 #https代理
